--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,36 +6,40 @@
 <h4><%= @item.code %></h4>
 <br>
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
+<% if (@item.images) && (@item.images.count > 0) %>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-  	<% @item.images.each_with_index do |image, i| %>
-	    <div class="item <% if (i==0) %> active <% end %>">
-	      <%= image_tag image.image.thumb('x600').url if image.image_stored? %>
-	      <div class="carousel-caption">
-          <h4><%= image.caption %></h4>
-	      </div>
-	    </div>
-    <% end %>
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+    	<% @item.images.each_with_index do |image, i| %>
+  	    <div class="item <% if (i==0) %> active <% end %>">
+  	      <%= image_tag image.image.thumb('x600').url if image.image_stored? %>
+  	      <div class="carousel-caption">
+            <h4><%= image.caption %></h4>
+  	      </div>
+  	    </div>
+      <% end %>
+    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" id="carousel-override" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" id="glyphicon-override"  aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" id="carousel-override" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" id="glyphicon-override" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" id="carousel-override" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" id="glyphicon-override"  aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" id="carousel-override" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" id="glyphicon-override" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+<% end %>
 
 <!-- Google Analytics -->
 
