--- a/app/views/welcome/admin.html.erb
+++ b/app/views/welcome/admin.html.erb
@@ -12,7 +12,7 @@
 		<h3 id="admin">ADMIN CENTER</h3>
 	</div>
 
-	<div id="manage-cat-keys">
+	<div class="manage-cat-keys" id="manage-cats">
 		<h4>CATEGORIES</h4>
 
 		<script id="cat-template" type="mustache">
@@ -61,7 +61,7 @@
 
 	</div>
 
-	<div id="manage-cat-keys">
+	<div class="manage-cat-keys" id="manage-keys">
 		<h4>KEYWORDS</h4>
 
 		<script id="key-template" type="mustache">
