--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -9,7 +9,7 @@
 
 	<p>	Thank you very much for visiting our website.</p>
 
-	<p>I have been selling fine antique lace, linens, textiles, and fans in London, England  since 1977. I have supplied many fine and historical pieces to private collectors, museums, and also to many shops throughout Europe and Japan. Now also based in New York, in addition to supplying many of our customers in Europe we also do a few major shows in the U.S, and sell smaller items of lace and textiles on Ebay.</p>
+	<p>I have been selling fine antique lace, linens, textiles, and fans in London, England since 1977. I have supplied many fine and historical pieces to private collectors, museums, and also to many shops throughout Europe and Japan. Now also based in New York, in addition to supplying many of our customers in Europe we also do a few major shows in the U.S., and sell smaller items of lace and textiles on Ebay.</p>
 
 	<p>I am always interested in purchasing beautiful items, either one special item or an estate of fine lace, linens, textiles, fans and clothing. I will also take exceptional items on consignment if the customer wishes. I am very interested in purchasing antique lace from the 16th Century to the 19th Century, beautiful hand-made European linens and fine textiles, Turkish, Chinese & Japanese textiles and robes, ornate fans, children's items, antique & vintage clothing, and fine handbags & accessories.</p>
 
@@ -18,6 +18,8 @@
 	<p>Thank you very much,</p>
 
 	<p id="signature"><a href="mailto:ariam7@gmail.com">Maria Niforos</a></p>
+
+	<p>ariam7@gmail.com</p>
 
 </div>
 </body>
